--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,6 +1,7 @@
 @import 'header';
 @import 'layout';
 @import 'movies';
+@import 'searchbar';
 
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
@@ -10,6 +11,9 @@ $secondlycolor: #d5dc27;
 
 // text formatting
 
+body{
+  background-color: #f5f6f8;
+}
 p {
   font-size: 1em;
   color: $primanycolor;
@@ -19,6 +23,7 @@ p {
 .app {
   width: calc(100% - 30px);
   margin: 0 auto;
+
 }
 
 .header {
@@ -34,82 +39,40 @@ p {
       background-color: #001c28;
       display: block;
       margin: 6px;
+      @media screen and (min-width: 500px) {
+        width: 40px;
+        height: 4px;
+        border-radius: 7px;
+        background-color: #001c28;
+        display: block;
+        margin: 9px;
+      }
     }
     span:last-child{
       margin: 7px;
+
+      @media screen and (min-width: 500px) {
+        margin: 8px;
+        height: 3px;
+      }
     }
+
 
   }
   .title {
     p {
       margin: 1em 0 0 1.3em;
       font-size: 1em;
-    }
-  }
-}
-
-.filter-search {
-  display: flex;
-
-  .input-wrapper {
-    margin: 0 0px 40px 0;
-    border-bottom: solid 2px $secondlycolor;
-    width: 90%;
-    input {
-
-      outline: none;
-      border: none;
-      height: 40px;
-    }
-    input::placeholder {
-      font-size: 1em;
-      color: $secondlycolor;
-      opacity: 0.5;
       @media screen and (min-width: 500px) {
-        font-size: 1.6em;
+        margin: 0.4em 0 0 0.6em;
+        font-size: 2em;
       }
-    }
 
-    input[type="text"] {
-      font-size: 0.9em;
-      color: $secondlycolor;
-      margin: 5px 3px;
-      @media screen and (min-width: 500px) {
-        margin: 0px 0px 4px 1em;
-        font-size: 1.1em;
-        width: 70%;
-      }
-    }
-
-    .fas {
-      font-size: 1.6em;
-      color: $secondlycolor;
-      opacity: 0.5;
-    }
-  }
-
-  .filter {
-    width: 2.5em;
-    margin: 0 0px 40px 10px;
-    border-bottom: solid 2px #d5dc27;
-    cursor: pointer;
-    img {
-      margin: 15px 0 0 7px;
     }
   }
 }
 
-// movies
-.movie-wrapper {
-  width: 24%;
 
-  .img-wrapper {
-    width: 100%;
-  }
-  img {
-    width: 100%;
-  }
-}
 
 .movies {
   display: flex;
