--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,37 +1,23 @@
+$primanycolor: #001c28;
+$secondlycolor: #d5dc27;
+
 .header {
   height: 100px;
   display: inline-flex;
 
-  .hamburger {
-    margin: 10px 0 0 0;
-    cursor: pointer;
-    span {
-      width: 30px;
-      height: 3px;
-      border-radius: 2px;
-      background-color: #001c28;
-      display: block;
-      margin: 6px;
-      @media screen and (min-width: 500px) {
-        width: 40px;
-        height: 4px;
-        border-radius: 7px;
-        background-color: #001c28;
-        display: block;
-        margin: 9px;
-      }
-    }
-    span:last-child{
-      margin: 7px;
+  .header-hamburger {
 
-      @media screen and (min-width: 500px) {
-        margin: 8px;
-        height: 3px;
-      }
+    @media screen and (min-width: 768px) {
+      display: none;
     }
-
 
   }
+  nav {
+      @media screen and (min-width: 768px) {
+        display: block;
+    }
+  }
+
   .title {
     p {
       margin: 1em 0 0 1.3em;
@@ -43,4 +29,143 @@
 
     }
   }
+}
+
+.toggle__on {
+
+  margin: 10px 0 0 0;
+  cursor: pointer;
+  span {
+    width: 30px;
+    height: 3px;
+    border-radius: 2px;
+    background-color: #001c28;
+    display: block;
+    margin: 6px;
+    @media screen and (min-width: 500px) {
+      width: 40px;
+      height: 4px;
+      border-radius: 7px;
+      background-color: #001c28;
+      display: block;
+      margin: 9px;
+    }
+  }
+  span:last-child {
+    margin: 7px;
+
+    @media screen and (min-width: 500px) {
+      margin: 8px;
+      height: 3px;
+    }
+  }
+
+}
+
+.sidemenu__off {
+  display: none;
+
+}
+
+.sidemenu__on {
+
+  display: block;
+
+}
+nav{
+  background-color: #001c28;
+  position: absolute;
+  top: 0;
+  left: -260px;
+  width: 260px;
+  height: 100%;
+  z-index: 2;
+  -webkit-animation: slide 0.5s forwards;
+  animation: slide 0.5s forwards;
+
+
+  @-webkit-keyframes slide {
+    100% { left: 0; }
+  }
+
+  @keyframes slide {
+    100% { left: 0; }
+  }
+
+  h2 {
+    width: calc(100% - 35px);
+    margin: 35px auto 35px auto;
+    color: white;
+    font-family: lato;
+
+    img {
+      float: right;
+      position: relative;
+      top: 7px;
+      width: 25px;
+    }
+
+  }
+
+  .main-menu {
+    width: 100%;
+    padding: 0;
+    li {
+      padding: 20px 30px 22px 30px;
+      list-style-type: none;
+      color: white;
+      font-size: 20px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: $secondlycolor;
+
+      }
+      a {
+        width: 100%;
+      }
+    }
+
+    .sub-menu {
+      padding: 0px 0px 22px 0px;
+
+      li:first-child {
+        a {
+          color: white;
+          display: block;
+          font-size: 20px;
+          border-bottom: 2px solid #293a44;
+          line-height: 60px;
+
+
+          }
+        &:hover {
+          a{
+            background-color: $secondlycolor;
+            border-bottom: 2px solid $secondlycolor;
+          }
+
+        }
+      }
+
+      li {
+        padding: 0px 0px 0px 30px;
+        &:hover {
+          a {
+            color: white;
+          }
+        }
+        a {
+          border-bottom: none;
+          color: #293a44;
+          line-height: 30px;
+          padding: 0;
+          font-size: 16px;
+
+        }
+      }
+    }
+
+  }
+
 }
