Layout for the filter menu for desktop with sliding down animation. layout for the search bar for desktop and new input called year of movie

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -4,6 +4,8 @@
 @import 'searchbar';
 @import 'mixins';
 @import url('https://fonts.googleapis.com/css?family=Lato');
+@import 'Categories';
+
 
 //global colours
 $primanycolor: #001c28;
