--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,50 +1,40 @@
-$primanycolor: #001c28;
-$secondlycolor: #d5dc27;
-
 .header {
-  height: 100px;
   display: inline-flex;
 
-  &__hamburger {
+  margin: 15px 0 30px;
 
-    @media screen and (min-width: 768px) {
-      display: none;
-    }
-
+  @include bp(bp-3) {
+    display: none;
   }
+
+  &__hamburger {
+    position: relative;
+    z-index: 3;
+  }
+
   nav {
-    @media screen and (min-width: 992px) {
+    @include bp(bp-3) {
       display: block;
     }
   }
+
   .title {
     p {
-      font-size: 3.2vh;
+      margin: 0 0 0 0.5em;
 
-      margin: 0.45em 0px 0 0.5em;
+      font-size: 3.2vh;
     }
 
   }
-
-}
-
-.sidemenu__off {
-  display: none;
-
-}
-
-.sidemenu__on {
-  display: block;
 
 }
 
 .toggleoff {
-
   display: flex;
 }
 
-.toggle__on {
-  margin: 10px 0 0 0;
+.toggle {
+  // Base styles
   cursor: pointer;
 
   span {
@@ -55,66 +45,74 @@ $secondlycolor: #d5dc27;
     height: 3px;
 
     border-radius: 2px;
-
     background-color: #001c28;
 
-    @media screen and (min-width: 500px) {
-      display: block;
-
-      width: 40px;
-      height: 4px;
-      margin: 9px;
-
-      border-radius: 7px;
-      background-color: #001c28;
-    }
+    transition: all .3s ease;
   }
+
   span:last-child {
     margin: 6px;
     height: 3px;
+  }
 
-    @media screen and (min-width: 500px) {
-      margin: 9px;
-      height: 4px;
+  &--on {
+    span {
+      background: #fff;
     }
+
+    span:nth-child(1) {
+      transform: translateY(9px) rotate(45deg);
+    }
+
+    span:nth-child(2) {
+      opacity: 0;
+    }
+
+    span:nth-child(3) {
+      transform: translateY(-9px) rotate(-45deg);
+    }
+  }
+
+  &--off {
+
   }
 }
 
-nav {
-  position: absolute;
+.sidemenu {
+  position: fixed;
   top: 0;
-
-  left: -260px;
-  width: 260px;
-  height: 100%;
-
+  left: -$sidemenuWidth;
   z-index: 2;
 
-  -webkit-animation: slide 0.5s forwards;
-  animation: slide 0.5s forwards;
+  width: $sidemenuWidth;
+  height: 100vh;
+
+  padding-top: 25px;
+
+  transition: left .35s ease;
+  will-change: left;
 
   background-color: #001c28;
 
-  @-webkit-keyframes slide {
-    100% {
-      left: 0;
-    }
+  @include bp(bp-3) {
+    padding-top: 0;
+    left: 0;
   }
 
-  @keyframes slide {
-    100% {
-      left: 0;
-    }
+  &--on {
+    left: 0;
+  }
+
+  &--off {
+
   }
 
   h2 {
-
     width: calc(100% - 35px);
 
     margin: 35px auto 35px auto;
 
-    font-family: lato;
-
+    font-family: lato, arial, sans-serif;
     color: white;
 
     img {
@@ -122,14 +120,13 @@ nav {
       float: right;
       top: 7px;
       width: 25px;
-
     }
-
   }
 
   .main-menu {
     width: 100%;
     padding: 0;
+
     li {
       font-size: 20px;
 
@@ -140,7 +137,7 @@ nav {
       color: white;
 
       &:hover {
-        background-color: $secondlycolor;
+        background-color: $secondaryColor;
 
       }
       a {
@@ -163,8 +160,8 @@ nav {
         }
         &:hover {
           a {
-            border-bottom: 2px solid $secondlycolor;
-            background-color: $secondlycolor;
+            border-bottom: 2px solid $secondaryColor;
+            background-color: $secondaryColor;
           }
 
         }
