--- a/src/scss/_movies.scss
+++ b/src/scss/_movies.scss
@@ -5,10 +5,15 @@ $secondaryColor: #d5dc27;
 .movies {
   margin: 50px 0 0 0;
 
+  @include bp(bp-3) {
+    padding: 48px 0 0;
+  }
+
   @media screen and (min-width: 1200px) {
+    width: calc(75% - 15px);
+    float: left;
+
     margin: 0;
-    position: relative;
-    top: -53px;
   }
 
   &__total {
@@ -17,25 +22,25 @@ $secondaryColor: #d5dc27;
     font-weight: 300;
     margin: 0 0 10px 0;
 
-    @media screen and (min-width: 1200px){
- margin:0 0 0 260px  ;
   }
 
-}
   .movie {
+    position: relative;
+
     width: 100%;
-    background-color: white;
+
     margin: 7.5px 0;
     padding: 20px;
+
+    background-color: white;
+
     font-size: 3.6vw;
-
-
 
     @media screen and (min-width: 668px) {
       font-size: 2.6vw;
     }
     @media screen and (min-width: 998px) {
-      margin: 20px 0 0 260px;
+      margin: 20px 0 0;
     }
     @media screen and (min-width: 1200px) {
       font-size: 1.4vw;
@@ -55,7 +60,6 @@ $secondaryColor: #d5dc27;
       float: left;
 
       @media screen and (min-width: 668px) {
-
         width: 20%;
       }
 
@@ -66,12 +70,10 @@ $secondaryColor: #d5dc27;
     }
 
     &__details {
-      position: relative;
-
-      width: 66%;
+      width: 64%;
       float: right;
-      @media screen and (min-width: 668px) {
 
+      @media screen and (min-width: 668px) {
         width: 77%;
       }
 
@@ -79,8 +81,8 @@ $secondaryColor: #d5dc27;
 
     &__rating {
       position: absolute;
-      top: 5px;
-      right: 0;
+      top: 20px;
+      right: 20px;
 
       padding: 3px 5px;
 
@@ -117,6 +119,13 @@ $secondaryColor: #d5dc27;
         font-size: 0.85em;
         line-height: 1.3em;
 
+        @include bp(bp-3) {
+          font-size: 0.65em;
+        }
+        @include bp(bp-4) {
+          font-size: 0.85em;
+        }
+
         &:after {
           content: '';
 
@@ -127,20 +136,21 @@ $secondaryColor: #d5dc27;
           width: 60%;
           height: 1.25em;
 
-          background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%,rgba(255,255,255,1) 100%);        }
+          background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 70%, rgba(255, 255, 255, 1) 100%);
+        }
       }
     }
 
     &__date {
+      position: absolute;
+      bottom: 25px;
+
       p {
         margin: 0;
 
         font-size: 0.65em;
         color: $secondaryColor;
-        position: relative;
-        top: 10px;
         font-weight: 200;
-
       }
     }
   }
