--- a/src/scss/_searchbar.scss
+++ b/src/scss/_searchbar.scss
@@ -1,7 +1,3 @@
-//global colours
-$primanycolor: #001c28;
-$secondlycolor: #d5dc27;
-
 .filter-container {
 
   @media screen and (min-width: 1200px) {
@@ -11,91 +7,105 @@ $secondlycolor: #d5dc27;
     display: block;
 
     width: 25%;
-    margin: 0 0 0 15px;
-
-    height: 108px;
-    padding: 10px 20px 20px 20px;
-
-    background-color: white;
+    margin: 100px 0 0 15px;
   }
+
   .filter-search {
     display: flex;
 
     @media screen and (min-width: 998px) {
-      margin: 0px 0 0 260px;
+      margin: 30px 0 30px 30px;
     }
+
     @media screen and (min-width: 1200px) {
+      padding: 10px 20px 20px;
+
       display: block;
+
       margin: 0;
 
+      background: #fff;
     }
 
     .desktop-search {
       display: none;
+
       @media screen and (min-width: 1200px) {
         display: block;
 
         img {
           padding-right: 10px;
         }
+
         .filter-year {
           position: relative;
-          top: 8px;
         }
       }
     }
 
     .input-wrapper {
-
-      border-bottom: solid 2px $secondlycolor;
       width: 90%;
+
+      border-bottom: solid 2px $secondaryColor;
+
       @media screen and (min-width: 500px) {
         width: 94%;
       }
-      @media screen and (min-width: 1200px) {
+
+      @include bp(bp-4) {
         width: 100%;
-        line-height: 50px;
+
+        margin-bottom: 15px;
       }
+
+      &.desktop-search {
+        margin-bottom: 0;
+      }
+
       input {
         background-color: #f5f6f8;
         outline: none;
         border: none;
 
-        @media screen and (min-width: 1200px) {
-          background-color: white;
+        @include bp(bp-1) {
+          width: calc(100% - 45px);
+          height: 36px;
 
+          margin: 0 0 4px 0;
+
+          font-size: 1.4em;
         }
 
+        @include bp(bp-4) {
+          background: #fff;
+        }
+      }
+
+      img {
+        @include bp(bp-1) {
+          width: auto;
+          max-width: 45px;
+
+          transform: translateY(2px);
+        }
       }
 
       input::placeholder {
-
         position: relative;
-        bottom: 3px;
 
         opacity: 0.5;
         font-weight: 100;
 
-        color: $secondlycolor;
+        color: $secondaryColor;
       }
 
       input[type="text"] {
         position: relative;
-        bottom: 3px;
 
         font-weight: 100;
 
-        color: $secondlycolor;
+        color: $secondaryColor;
 
-        @media screen and (min-width: 500px) {
-          height: 36px;
-          width: 86%;
-
-          margin: 0px 0px 4px 0;
-
-          font-size: 1.4em;
-
-        }
         @media screen and (min-width: 500px) {
           bottom: 0;
         }
@@ -109,7 +119,7 @@ $secondlycolor: #d5dc27;
 
         opacity: 0.8;
 
-        color: $secondlycolor;
+        color: $secondaryColor;
 
         @media screen and (min-width: 500px) {
           width: 1.6em;
@@ -124,7 +134,9 @@ $secondlycolor: #d5dc27;
 
     .filter {
       width: 2em;
-      margin: 0px 0px 0px 13px;
+
+      margin: 0 0 0 13px;
+
       border-bottom: solid 2px #d5dc27;
 
       cursor: pointer;
@@ -133,8 +145,7 @@ $secondlycolor: #d5dc27;
         position: relative;
         top: 7px;
 
-        margin: 0px 8px 4px 3px;
-
+        margin: 0 8px 4px 3px;
       }
 
       @media screen and (min-width: 1200px) {
