--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -134,7 +134,6 @@
       padding: 20px 30px 22px 30px;
       list-style-type: none;
 
-      color: white;
 
       &:hover {
         background-color: $secondaryColor;
@@ -142,6 +141,9 @@
       }
       a {
         width: 100%;
+        text-decoration: none;
+        color: white;
+
       }
     }
 
