changed the colour of the dropped down

--- a/src/scss/_categories.scss
+++ b/src/scss/_categories.scss
@@ -32,7 +32,7 @@ button.category {
   border: none;
   outline: none;
   color: #444;
-
+background-color: white;
   &:after, &:before {
     display: block;
 
