--- a/src/scss/_movies.scss
+++ b/src/scss/_movies.scss
@@ -6,14 +6,21 @@ $secondaryColor: #d5dc27;
   margin: 50px 0 0 0;
 
   @include bp(bp-3) {
-    padding: 48px 0 0;
+    padding: 68px 0 0;
   }
 
+
+
+
   @media screen and (min-width: 1200px) {
-    width: calc(75% - 15px);
+    width: calc(71% - 15px);
     float: left;
 
     margin: 0;
+
+    @media screen and (min-width: 1500px) {
+      width: calc(75% - 15px);
+  }
   }
 
   &__total {
@@ -49,32 +56,57 @@ $secondaryColor: #d5dc27;
     &__header {
       h3 {
         margin: 0;
-
+width: 80%;
         color: $primaryColor;
 
       }
     }
 
     &__image {
-      width: 32%;
+      width: 35%;
       float: left;
+      min-height: 200px;
+
 
       @media screen and (min-width: 668px) {
-        width: 20%;
+      width: 24%;
+    }
+
+
+      @media screen and (min-width: 998px) {
+        width: 28%;
       }
 
+      @media screen and (min-width: 998px) {
+        width: 21%;
+      }
+
+      @media screen and (min-width: 998px) {
+        width: 15%;
+      }
       img {
         width: 100%;
         height: auto;
+
+
       }
     }
 
     &__details {
-      width: 64%;
+      width: 62%;
       float: right;
 
       @media screen and (min-width: 668px) {
+        width: 73%;
+      }
+      @media screen and (min-width: 998px) {
+        width: 70%;
+      }
+      @media screen and (min-width: 1200px) {
         width: 77%;
+      }
+      @media screen and (min-width: 1400px) {
+        width: 83%;
       }
 
     }
@@ -120,10 +152,10 @@ $secondaryColor: #d5dc27;
         line-height: 1.3em;
 
         @include bp(bp-3) {
-          font-size: 0.65em;
+          font-size: 0.8em;
         }
         @include bp(bp-4) {
-          font-size: 0.85em;
+          font-size: 0.75em;
         }
 
         &:after {
