--- a/src/scss/_searchbar.scss
+++ b/src/scss/_searchbar.scss
@@ -106,7 +106,7 @@
 
       input[type="text"] {
         position: relative;
-
+        font-size: 18px;
         font-weight: 500;
         color: $secondaryColor;
 
@@ -115,7 +115,7 @@
         }
 
         @media screen and (min-width: 1200px) {
-        font-size: 18px;
+
           top: 1px;
 
         }
@@ -132,7 +132,7 @@
       .searchbar-icon {
         position: relative;
         top: 5px;
-        width: 20px;
+        width: 22px;
         margin: 0 18px 0 0;
 
         opacity: 0.8;
@@ -153,16 +153,13 @@
     .filter {
       width: 2em;
 
-      margin: 0 0 0 13px;
+      margin: 5px 0 0 13px;
 
       border-bottom: solid 2px #d5dc27;
 
       cursor: pointer;
 
       img {
-        position: relative;
-        top: 7px;
-
         margin: 0 8px 4px 3px;
       }
 
