--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -57,10 +57,10 @@ p {
   @media screen and (min-width: 768px) {
     max-width: 60%;
   }
-  @media screen and (min-width: 998px) {
+  @include bp(bp-3) {
     max-width: 46%;
   }
-  @media screen and (min-width: 1200px) {
+  @include bp(bp-4) {
     max-width: 600px;
     width: 100%;
 
