--- a/src/scss/_movies.scss
+++ b/src/scss/_movies.scss
@@ -12,7 +12,7 @@ $secondaryColor: #d5dc27;
 
 
 
-  @media screen and (min-width: 1200px) {
+  @include bp(bp-4) {
     width: calc(71% - 15px);
     float: left;
 
@@ -36,20 +36,20 @@ $secondaryColor: #d5dc27;
 
     width: 100%;
 
-    margin: 7.5px 0;
+    margin: 15px 0;
     padding: 20px;
 
     background-color: white;
 
     font-size: 3.6vw;
 
-    @media screen and (min-width: 668px) {
+    @include bp(bp-2) {
       font-size: 2.6vw;
     }
-    @media screen and (min-width: 998px) {
+    @include bp(bp-3) {
       margin: 20px 0 0;
     }
-    @media screen and (min-width: 1200px) {
+    @include bp(bp-4) {
       font-size: 1.4vw;
     }
 
@@ -68,20 +68,20 @@ width: 80%;
       min-height: 200px;
 
 
-      @media screen and (min-width: 668px) {
+      @include bp(bp-2) {
       width: 24%;
     }
 
 
-      @media screen and (min-width: 998px) {
+      @include bp(bp-3) {
         width: 28%;
       }
 
-      @media screen and (min-width: 998px) {
+      @include bp(bp-4) {
         width: 21%;
       }
 
-      @media screen and (min-width: 998px) {
+      @media screen and (min-width: 1400px) {
         width: 15%;
       }
       img {
@@ -96,13 +96,13 @@ width: 80%;
       width: 62%;
       float: right;
 
-      @media screen and (min-width: 668px) {
+      @include bp(bp-2) {
         width: 73%;
       }
-      @media screen and (min-width: 998px) {
+      @include bp(bp-3) {
         width: 70%;
       }
-      @media screen and (min-width: 1200px) {
+      @include bp(bp-4) {
         width: 77%;
       }
       @media screen and (min-width: 1400px) {
