--- a/src/scss/_searchbar.scss
+++ b/src/scss/_searchbar.scss
@@ -1,6 +1,6 @@
 .filter-container {
 
-  @media screen and (min-width: 1200px) {
+  @include bp(bp-4) {
     position: relative;
     float: right;
     bottom: 14px;
@@ -18,11 +18,11 @@
   .filter-search {
     display: flex;
 
-    @media screen and (min-width: 998px) {
+    @include bp(bp-2) {
       margin: 60px 0 30px 30px;
     }
 
-    @media screen and (min-width: 1200px) {
+    @include bp(bp-4) {
       padding: 15px 20px 20px;
 
       display: block;
@@ -35,7 +35,7 @@
     .desktop-search {
       display: none;
 
-      @media screen and (min-width: 1200px) {
+      @include bp(bp-4) {
         display: block;
 
         img {
@@ -53,7 +53,7 @@
 
       border-bottom: solid 2px $secondaryColor;
 
-      @media screen and (min-width: 500px) {
+      @include bp(bp-1) {
         width: 94%;
       }
 
@@ -110,11 +110,11 @@
         font-weight: 500;
         color: $secondaryColor;
 
-        @media screen and (min-width: 500px) {
+        @include bp(bp-1) {
           bottom: 0;
         }
 
-        @media screen and (min-width: 1200px) {
+        @include bp(bp-4) {
 
           top: 1px;
 
@@ -132,17 +132,17 @@
       .searchbar-icon {
         position: relative;
         top: 5px;
-        width: 22px;
+        width: 20px;
         margin: 0 18px 0 0;
 
         opacity: 0.8;
 
         color: $secondaryColor;
 
-        @media screen and (min-width: 500px) {
+        @include bp(bp-1) {
           width: 1.6em;
         }
-        @media screen and (min-width: 1200px) {
+        @include bp(bp-4) {
           width: 1.3em;
           margin: 0 12px 0 0;
         }
@@ -163,7 +163,7 @@
         margin: 0 8px 4px 3px;
       }
 
-      @media screen and (min-width: 1200px) {
+      @include bp(bp-4) {
         display: none;
       }
     }
